<resources>
    <string name="app_name">Заказы</string>
    <string name="orders">Выбрать заказ</string>
    <string name="clients">Клиенты</string>
    <string name="goods">Номентклатура</string>
    <string name="settings">Настройки</string>
    <string name="chat_ig_sign">Идентификатор канала</string>
    <string name="chat_id">Введите айди</string>
    <string name="bot_id_sign">Идентификатор бота</string>
    <string name="bot_id">Введите идентификатор бота</string>
    <string name="bot_test_button">Проверка бота</string>
    <string name="error_fetching_chat_id">Error fetching chat ID!</string>
    <string name="error_fetching_bot_id">Error fetching bot ID!</string>
    <string name="error_test_connection">Ошибка проверки соединения!</string>
    <string name="addGoodItemButtonSign">Добавить</string>
    <string name="article_et_sign">Артикул\n</string>
    <string name="article">Артикул</string>
    <string name="name_et_sign">Наименование товара</string>
    <string name="product_name">Наименование товара</string>
    <string name="name">Наименование</string>
    <string name="article_example">1</string>
    <string name="addArticle">Добавить наименование</string>
    <string name="send_btn_name">Отправить</string>
    <string name="barcode_length_error">Ошибка длины штрих-кода.</string>
    <string name="article_error_in_db">Неизвестный товар</string>
    <string name="something_went_wrong">Что то пошло не так! Заказ не отправлен!</string>
    <string name="delete_btn_name">Удалить заказ</string>
    <string name="delete_alert_dialog_attention_message">Вы уверены? Безвозвратно удалить?</string>
    <string name="yes_btn_sign">Да, удалить!</string>
    <string name="no_btn_sign">Отменить удаление.</string>
    <string name="telegram_send_message_error">Ошибка отправки заказа.</string>
    <string name="update_btn">Обновить</string>
    <string name="add_item_manual_btn">Добавить товар</string>
    <string name="accept">Добавить</string>
    <string name="decline">Отмена</string>
    <string name="date_format">неверный формат даты</string>
    <string name="date_hint">дд.мм.гг</string>
    <string name="weight_hint">Вес товара</string>
    <string name="ok_btn">OK</string>
    <string name="password_error">Неверный пароль</string>
    <string name="password">Пароль</string>
    <string name="save_pass_btn">Сохранить пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="empty_list_message">Откройте заказ для сборки</string>
    <string name="new_order_name">Введите имя нового заказа</string>
    <string name="empty_order_list_message">Введите ниже имя нового заказа</string>
    <string name="export_settings">Экспортировать настройки</string>
    <string name="import_settings">Импортировать настройки</string>
    <string name="server_url_sign">Адрес сервера</string>
    <string name="server_url_hint">http://10.0.2.2:8080/</string>
    <string name="save_server_url_btn">Сохранить адрес сервера</string>
    <string name="logout_btn">Выйти из аккаунта</string>
    <string name="login_title">Вход</string>
    <string name="login_username_hint">Логин</string>
    <string name="login_password_hint">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="orders_import">Импорт заказов</string>
    <string name="import_from_memory">С памяти телефона</string>
    <string name="import_from_google_sheets">Импорт с Google таблиц</string>
    <string name="choose_file_to_import">Выберите файл для импорта</string>
    <string name="choose_all">Выбрать все</string>
    <string name="unchecked_all">Отмменить все</string>
    <string name="save_date_to_databse">Сохранить выбранные даты в базу</string>
    <string name="weight_ordered">Заказано</string>
    <string name="weight_executed">Отгружено</string>
    <string name="box_sum">Кол-во ящ.</string>
    <string name="weight_flaw">Недостаток</string>
    <string name="box_sum_flaw">Недостаток ящ.</string>
    <string name="nomenclature_code">Номентклатурный код 1С</string>
    <string name="label_print_button">Печать этикеток</string>
    <string name="et_x">X:</string>
    <string name="et_y">Y:</string>
    <string name="et_H">Выс. мм</string>
    <string name="et_w">Шир. мм</string>
    <string name="bold_text">Жирный</string>
    <string name="add_label_btn_sign">Добавить этикетку</string>
    <string name="add_printer_btn_sign">Добавить принтер</string>
    <string name="empty_label_name_list_message">Список пуст. Добавьте этикетку.</string>
    <string name="save_label_btn_sign">Сохранить этикетку</string>
    <string name="label_name_hint">Наименование этикетки</string>
    <string name="printer_btn_sign">Принтеры</string>
    <string name="empty_printer_list_message">Список пуст. Нажмите кнопку добавить принтер.</string>
    <string name="save_printer_btn">Сохранить принтер</string>
    <string name="delete_printer_btn">Удалить принтер</string>
    <string name="choose_printer">Выбрать принтер</string>
    <string name="weight_on_label">Вес товара на этикетке</string>
    <string name="label_quantity">Количество этикеток</string>
    <string name="label_date_mfg">Дата производства</string>
    <string name="delete_label_btn">Удалить этикетку</string>
    <string name="plu_code">PLU код</string>
    <string name="double_error">Данный товар присутствует в списке заказа!</string>
    <string name="orders_collector">Сборщик заказов</string>
    <string name="add_order_fab">Добавить заказ</string>
    <string name="add_btn_sign">Добавить клиента</string>
    <string name="client_number">Номер</string>
    <string name="client_code">Код</string>
    <string name="client_full_label">Наименование</string>
    <string name="client_region">Регион</string>
    <string name="client_responsible_person">Ответственное лицо</string>
    <string name="client_phone">Телефон</string>
    <string name="client_unit_id">Номер клиента 1С</string>
    <string name="client_category">Категория</string>
    <string name="save">Сохранить</string>
    <string name="delete_btn">Удалить</string>
    <string name="shipping_date_sign">Дата отгрузки</string>
    <string name="subdivision_choose_btn_sign">Выбрать клиента</string>
    <string name="create_btn_sing">Создать</string>
    <string name="quantity_ordered_sign">Вес</string>
    <string name="placing_order_client_entity_error">Добавьте клиента в заказ!</string>
    <string name="placing_order_empty_date_error">Укажите дату отгрузки!</string>
    <string name="placing_order_date_valid_error">Неверный формат даты отгрузки!</string>
    <string name="placing_order_empty_weight_error">Укажите вес хотя бы в одном товаре!</string>
    <string name="take_order_before_adding_product">Сначала нужно выбрать заказ</string>
    <string name="delete_product_from_order">Удалить товар из заказа</string>
    <string name="clean_executed_weight_sum">Очистить вес</string>
    <string name="weight_and_date_to_calculate">Укажите вес и дату</string>
    <string name="date">Дата</string>
    <string name="weight">Вес</string>
    <string name="add_weight">Добавить</string>
    <string name="order_has_been_sent">Заказ отправлен</string>
    <string name="edit_label">Редактировать этикетку</string>
    <string name="add_on_the_basis_label">Добавить на основании</string>
    <string name="dstu">ДСТУ</string>
    <string name="proteins">Белки</string>
    <string name="fats">Жири</string>
    <string name="kkal">Ккал</string>
    <string name="temp_limits">Температурные границы ("от" и "до" / "до")</string>
    <string name="storage_time">Время хранения</string>
    <string name="temp_from">от</string>
    <string name="temp_to">до</string>
    <string name="by_weight_or_by_piece">Весовая этикетка</string>
    <string name="nutrition">Пищевая ценность</string>
    <string name="storage_conditions">Условия хранения</string>
    <string name="edit_fast_label">Быстро редактировать этикетку</string>
    <string name="name_label">Наименование этикетки</string>
    <string name="no_product_in_order">Товара нет в заказе.</string>
    <string name="storage_time_days">Срок храения в днях</string>
    <string name="server_empty_response_message">Сервер вернул пустой список</string>
</resources>