<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/orders_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/orders_collector" />

        <Button
            android:id="@+id/placing_order_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_order_fab" />

        <Button
            android:id="@+id/import_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/orders_import" />

        <Button
            android:id="@+id/goods_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/goods" />

        <Button
            android:id="@+id/clients_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/clients" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/labelBtn"
            android:layout_margin="16dp"
            android:text="@string/label_print_button"/>

        <Button
            android:id="@+id/settings_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/settings" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>